--- a/src/Makefile
+++ b/src/Makefile
@@ -18,7 +18,7 @@ libgroupsock_LIB_SUFFIX = $(LIB_SUFFIX)
 MARCOS = -DSOCKLEN_T=socklen_t -g -D_LARGEFILE_SOURCE=1 -D_FILE_OFFSET_BITS=64 -DDEBUG_RTP_TIMESTAMP=1 -DDEBUG_TIMESTAMPS=1\
 	-DGL_RENDOR_SPHERE=1
 COMPILE_OPTS =	$(INCLUDES) $(MARCOS)
-COMPILE_OPTS += $$(pkg-config --cflags libavcodec libavutil libavformat libswscale libglog glfw3)
+COMPILE_OPTS += $$(pkg-config --cflags libavcodec libavutil libavformat libswscale libglog glfw3 jsoncpp)
 C =			c
 C_COMPILER =		cc
 C_FLAGS =		$(COMPILE_OPTS)
